# precommit-mypy-pipenv

./: .pre-commit-hooks.yaml  README.md  bump.py  mypy.sh  pyproject.toml  setup.py
.github/workflows/: bump.yml
hooks/: runmypy.py
