[project]
name = "precommit-mypy-pipenv"
requires-python = ">=3.8"
version = "0.0.0"
dependencies = ["mypy==1.5.1", "pipenv"]

[project.scripts]
runmypy = "hooks.runmypy:main"

# [build-system]
# requires = ["setuptools", "build", "setuptools_scm[toml]"]
# build-backend = "setuptools.build_meta"

# [tool.setuptools]
# zip-safe = false
